--- a/src/index.css
+++ b/src/index.css
@@ -220,7 +220,9 @@ nav ul li button {
   top: 12px;
   cursor: pointer;
 }
-
+.success {
+  text-align: center;
+}
 /* form style */
 form {
   display: flex;
