--- a/src/index.css
+++ b/src/index.css
@@ -102,7 +102,7 @@ nav ul li button {
     display: block;
   }
 
-  ul {
+  nav ul {
     position: fixed;
     width: 100%;
     height: 100vh;
@@ -111,6 +111,7 @@ nav ul li button {
     text-align: center;
     transition: all .5s;
     background-color: #fff;
+    z-index: 1;
   }
 
   nav ul li {
@@ -155,6 +156,8 @@ nav ul li button {
   letter-spacing: 0em;
   text-align: center;
   color: #418F86;
+  opacity: 1;
+  transition: opacity 0.5s ease-in-out;
 }
 
 .home-section button {
@@ -163,6 +166,31 @@ nav ul li button {
   padding: 12px;
   color: #ffffff;
   border: none;
+}
+.home-section h2 {
+  position: absolute;
+  text-align: center;
+  transition: opacity 0.5s ease-in-out;
+  opacity: 0;
+  font-size: 134px;
+  font-style: normal;
+  font-weight: 900;
+  line-height: normal;
+  -webkit-text-fill-color: white;
+  -webkit-text-stroke-width: 2px;
+  -webkit-text-stroke-color: #418F86;
+}
+.absNumber {
+  position: absolute;
+  right: 40px;
+  top: -25px;
+  /* font-family: Noto Sans; */
+  font-size: 100px;
+  font-weight: 700;
+  line-height: 136px;
+  letter-spacing: 0.5px;
+  color: #cccc;
+  text-align: left;
 }
 
 
